Added update to highlighting colors

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -374,21 +374,21 @@
 				<div class="topnav">
 						<b id="hide" style="cursor: pointer; color: darkmagenta">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/><br/>
 						<b id="highlightColor">Choose Highlight Color:</b> <br/><br/>
-						<label class="container"  style="color: blue">Blue
-							<input type="radio" name="radiobutton" id="highlight1" value="highlight1">
-							<span class="checkmark"></span>
+						<label class="container"  style="color: #0B9BCD">Blue
+						  <input type="radio" name="radiobutton" id="highlight1" value="highlight1">
+						  <span class="checkmark"></span>
 						</label> <br/><br/>
-						<label class="container" style="color: purple">Purple
-							<input type="radio" name="radiobutton" id="highlight2" value="highlight2">
-							<span class="checkmark"></span>
-						</label>  <br/><br/>
 						<label class="container" style="color: green">Green
-							<input type="radio" name="radiobutton" id="highlight3" value="highlight3">
-							<span class="checkmark"></span>
+						  <input type="radio" name="radiobutton" id="highlight2" value="highlight2">
+						  <span class="checkmark"></span>
+						</label>  <br/><br/>
+						<label class="container" style="color: #F8C200">Yellow
+						  <input type="radio" name="radiobutton" id="highlight3" value="highlight3">
+						  <span class="checkmark"></span>
 						</label> <br/><br/>
-						<label class="container" style="color: red">Red
-							<input type="radio" name="radiobutton" id="highlight4" value="highlight4">
-							<span class="checkmark"></span>
+						<label class="container" style="color: #BF0603">Red
+						  <input type="radio" name="radiobutton" id="highlight4" value="highlight4">
+						  <span class="checkmark"></span>
 						</label> <br/><br/>
 						<b id="highlightElements" style="cursor: pointer; color: darkmagenta">Highlight Elements</b> <br/><br/>
 						<b id="highlightNeighbors" style="cursor: pointer; color: darkmagenta">Highlight Neighbors</b><br/><br/>
