Added update to code under issue #15

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -346,7 +346,7 @@
                 });
 
                 $("#removeAllHighlights").click(function () {
-                    ur.do("removeHighlights", cy.elements());
+                    ur.do("removeHighlights");
                 });
 
                 $("#search").click(function () {
