--- a/demo.html
+++ b/demo.html
@@ -344,7 +344,7 @@
 
                 $("#removeAllHighlights").click(function () {
                     api.disableMarqueeZoom();
-                    api.removeHighlights(cy.elements());
+                    api.removeHighlights();
                 });
 			});
 		</script>
