--- a/demo.html
+++ b/demo.html
@@ -1,111 +1,111 @@
 <!DOCTYPE>
 <html>
 
-	<head>
-		<title>cytoscape-view-utilities.js demo</title>
+    <head>
+        <title>cytoscape-view-utilities.js demo</title>
 
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 
-    <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-		<script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+        <script src="https://unpkg.com/cytoscape/dist/cytoscape.min.js"></script>
 
-		<!-- for testing with local version of cytoscape.js -->
-		<!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
-    <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
-		<script src="cytoscape-view-utilities.js"></script>
+        <!-- for testing with local version of cytoscape.js -->
+        <!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
+        <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
+        <script src="cytoscape-view-utilities.js"></script>
 
-		<style>
-			body {
-				font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
-				font-size: 14px;
-			}
+        <style>
+            body {
+                font-family: helvetica neue, helvetica, liberation sans, arial, sans-serif;
+                font-size: 14px;
+            }
+            #cy {
+                width: 80%;
+                height: 100%;
+                left: 21%;
+                top: 0%;
+                float: left;
+                overflow: hidden;
+                position: fixed;
+            }
+            .topnav {
+                width: 20%;
+                background-color: #e9e9e9;
+                font-weight: bold;
+                border-color: black;
+                border-style: solid;
+                font-size: 16;
+                padding: 10;
+            }
+            .topnav b:hover
+            {
+               background-color:white;
+            }
+            /* Customize the label (the container) */
+            .topnav .container {
 
-			#cy {
-				width: 80%;
-				height: 100%;
-				left: 21%;
-				top: 0%;
-				float: left;
-				overflow: hidden;
-				position: fixed;
-			}
-			.topnav {
-				width: 20%;
-			  background-color: #e9e9e9;
-				font-weight: bold;
-				border-color: black;
-				border-style: solid;
-				font-size: 16;
-			}
-			.topnav b:hover
-			{
-			   background-color:white;
-			}
-			/* Customize the label (the container) */
-			.topnav .container {
+              position: relative;
+              padding: 14px;
+              cursor: pointer;
+              font-size: 15px;
+              left: 5px;
+              -webkit-user-select: none;
+              -moz-user-select: none;          'border-color': 'purple'
+              -ms-user-select: none;
+              user-select: none;
+            }
+            /* Hide the browser's default radio button */
+            .topnav .container input {
+              position: absolute;
+              opacity: 0;
+              cursor: pointer;
+              height: 0;
+              width: 0;
+            }
+            /* Create a custom radio button */
+            .topnav .checkmark {
+              position: absolute;
+              top: 17px;
+              left: 0;
+              right: 0px;
+              height: 12px;
+              width: 12px;
+              margin-right: 20px;
+              background-color: #000000;
+              border-radius: 50%;
+            }
+            /* On mouse-over, add a grey background color */
+            .container:hover input ~ .checkmark {
+                    background-color: #000000;
+            }
+            /* When the radio button is checked, add a blue background */
+            .container input:checked ~ .checkmark {
+                    background-color: #000          'border-color': 'purple'000;
+            }
+            /* Create the indicator (the dot/circle - hidden when not checked) */
+            .checkmark:after {
+                    content: "";
+                    position: absolute;
+                    display: none;
+            }
+            /* Show the indicator (dot/circle) when checked */
+            .container input:checked ~ .checkmark:after {
+                    display: block;
+            }
+            /* Style the indicator (dot/circle) */
+            .container .checkmark:after {
+                    position: absolute;
+                    top: 3px;
+                    left: 3px;
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background: white;
+            }
+        </style>
+        <script>
 
-			  position: relative;
-			  padding: 14px;
-			  cursor: pointer;
-			  font-size: 15px;
-			  left: 5px;
-			  -webkit-user-select: none;
-			  -moz-user-select: none;          'border-color': 'purple'
-			  -ms-user-select: none;
-			  user-select: none;
-			}
-			/* Hide the browser's default radio button */
-			.topnav .container input {
-			  position: absolute;
-			  opacity: 0;
-			  cursor: pointer;
-			  height: 0;
-			  width: 0;
-			}
-			/* Create a custom radio button */
-			.topnav .checkmark {
-			  position: absolute;
-			  top: 17px;
-			  left: 0;
-			  right: 0px;
-			  height: 12px;
-			  width: 12px;
-			  margin-right: 20px;
-			  background-color: #000000;
-			  border-radius: 50%;
-			}
-			/* On mouse-over, add a grey background color */
-			.container:hover input ~ .checkmark {
-				background-color: #000000;
-			}
-			/* When the radio button is checked, add a blue background */
-			.container input:checked ~ .checkmark {
-				background-color: #000          'border-color': 'purple'000;
-			}
-			/* Create the indicator (the dot/circle - hidden when not checked) */
-			.checkmark:after {
-				content: "";
-				position: absolute;
-				display: none;
-			}
-			/* Show the indicator (dot/circle) when checked */
-			.container input:checked ~ .checkmark:after {
-				display: block;
-			}
-			/* Style the indicator (dot/circle) */
-			.container .checkmark:after {
-				position: absolute;
-				top: 3px;
-				left: 3px;
-				width: 6px;
-				height: 6px;
-				border-radius: 50%;
-				background: white;
-			}
-		</style>
-		<script>
-
-			document.addEventListener("DOMContentLoaded", function(){
+            document.addEventListener("DOMContentLoaded", function(){
                 var cy = window.cy = cytoscape({
                     container: document.getElementById('cy'),
                     layout: { name: "cose-bilkent" },
@@ -115,8 +115,8 @@
                             style: {
                                 'content': 'data(name)',
                                 'border-color': 'grey',
-																'border-width': 3,
-																'background-color': 'lightgrey'
+                                'border-width': 3,
+                                'background-color': 'lightgrey'
                             }
                         },
                         {
@@ -125,26 +125,26 @@
                                 'target-arrow-shape': 'triangle'
                             }
                         },
-												{
-													selector: 'edge:selected',
-													style: {
-															'line-color': 'black'
-													}
-												},
-												{
-													selector: 'node:selected',
-													style: {
-															'border-color': 'black',
-															'border-width': '3px',
-															'background-color': 'lightgrey'
-													}
-												},
-												{
-													selector: 'node:parent',
-													style: {
-															'background-color': 'lightgrey'
-													}
-												}
+                        {
+                            selector: 'edge:selected',
+                            style: {
+                                            'line-color': 'black'
+                            }
+                        },
+                        {
+                            selector: 'node:selected',
+                            style: {
+                                            'border-color': 'black',
+                                            'border-width': '3px',
+                                            'background-color': 'lightgrey'
+                            }
+                        },
+                        {
+                            selector: 'node:parent',
+                            style: {
+                                            'background-color': 'lightgrey'
+                            }
+                        }
                     ],
 
                     elements: {
@@ -210,21 +210,20 @@
                 });
 
                 var layout = cy.layout({
-                  name: 'cose-bilkent',
-                  randomize: false,
-                  fit: false
+                    name: 'cose-bilkent',
+                    randomize: false,
+                    fit: false
                 });
 
                 function changeBorder(eles){
-                  eles.forEach(function( ele ){
-                    ele.css("background-color", 'purple');
-                  });
-                  return eles;
+                    eles.forEach(function( ele ){
+                        ele.css("background-color", 'purple');
+                    });
+                    return eles;
                 }
                 function revertBorder(eles){
-                  eles.forEach(function( ele ){
-										ele.css("background-color", 'lightgrey');
-
+                    eles.forEach(function( ele ){
+                        ele.css("background-color", 'lightgrey');
                   });
                   return eles;
                 }
@@ -280,17 +279,17 @@
 
                 var tappedBefore;
                 cy.on('tap', 'node', function (event) {
-                  var node = this;
-                  var tappedNow = node;
-                  setTimeout(function () {
-                    tappedBefore = null;
-                  }, 300);
-                  if (tappedBefore && tappedBefore.id() === tappedNow.id()) {
-                    tappedNow.trigger('doubleTap');
-                    tappedBefore = null;
-                  } else {
-                    tappedBefore = tappedNow;
-                  }
+                    var node = this;
+                    var tappedNow = node;
+                    setTimeout(function () {
+                      tappedBefore = null;
+                    }, 300);
+                    if (tappedBefore && tappedBefore.id() === tappedNow.id()) {
+                      tappedNow.trigger('doubleTap');
+                      tappedBefore = null;
+                    } else {
+                      tappedBefore = tappedNow;
+                    }
                 });
 
                 cy.on('doubleTap', 'node', function (event) {
@@ -303,25 +302,25 @@
                     }
                 });
 
-								function chooseHighlightColor(){
-									var option = "";
-									if(document.getElementById('highlight1').checked)
-									{
-										option = "highlighted";
-									}
-									else if(document.getElementById('highlight2').checked)
-									{
-										option = "highlighted2";
-									}
-									else if(document.getElementById('highlight3').checked)
-									{
-										option = "highlighted3";
-									}
-									else if(document.getElementById('highlight4').checked)
-									{
-										option = "highlighted4";
-									}
-                  return option;
+                function chooseHighlightColor(){
+                    var option = "";
+                    if(document.getElementById('highlight1').checked)
+                    {
+                            option = "highlighted";
+                    }
+                    else if(document.getElementById('highlight2').checked)
+                    {
+                            option = "highlighted2";
+                    }
+                    else if(document.getElementById('highlight3').checked)
+                    {
+                            option = "highlighted3";
+                    }
+                    else if(document.getElementById('highlight4').checked)
+                    {
+                            option = "highlighted4";
+                    }
+                    return option;
                 }
 
                 $("#highlightNeighbors").click(function () {
@@ -346,45 +345,45 @@
                     api.disableMarqueeZoom();
                     api.removeHighlights();
                 });
-			});
-		</script>
-	</head>
+            });
+        </script>
+    </head>
 
-	<body>
-		<h1>cytoscape.js-view-utilities demo</h1>
-		<div class="topnav">
-				<b id="hide" style="cursor: pointer; color: brown">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: brown">Show All</b> <br/><br/>
-        <b id="highlightColor">Choose Highlight Color:</b> <br/><br/>
-				<label class="container"  style="color: #0B9BCD">Blue
-				  <input type="radio" name="radiobutton" id="highlight1" value="highlight1">
-				  <span class="checkmark"></span>
-				</label> <br/><br/>
-				<label class="container" style="color: green">Green
-				  <input type="radio" name="radiobutton" id="highlight2" value="highlight2">
-				  <span class="checkmark"></span>
-				</label>  <br/><br/>
-				<label class="container" style="color: #F8C200">Yellow
-				  <input type="radio" name="radiobutton" id="highlight3" value="highlight3">
-				  <span class="checkmark"></span>
-				</label> <br/><br/>
-				<label class="container" style="color: #BF0603">Red
-				  <input type="radio" name="radiobutton" id="highlight4" value="highlight4">
-				  <span class="checkmark"></span>
-				</label> <br/><br/>
-				<b id="highlightElements" style="cursor: pointer; color: brown">Highlight Elements</b> <br/><br/>
-        <b id="highlightNeighbors" style="cursor: pointer; color: brown">Highlight Neighbors</b><br/><br/>
-				<b id="showHiddenNeighbors" style="cursor: pointer; color: brown">Show Hidden Neighbors of Selected</b> <br/><br/>
-				<b id="removeSelectedHighlights" style="cursor: pointer; color: brown">Remove Selected Highlights</b> <br/><br/>
-				<b id="removeAllHighlights" style="cursor: pointer; color: brown">Remove All Highlights</b> <br/><br/>
-				<b id="zoomToSelected" style="cursor: pointer; color: brown">Zoom to Selected</b><br/><br/>
-				<b id="marqueeZoom" style="cursor: pointer; color: brown">Marquee Zoom</b><br/><br/>
-        <b>Shift + drag</b> to specify region<br/>
-        <b>Shift + taphold</b> to select neighbors<br/>
-        <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
-        <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
-	 </div>
-   <div id="cy"></div>
+    <body>
+        <h1>cytoscape.js-view-utilities demo</h1>
+        <div class="topnav">
+            <b id="hide" style="cursor: pointer; color: brown">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: brown">Show All</b> <br/><br/>
+            <b id="highlightColor">Choose Highlight Color:</b> <br/><br/>
+            <label class="container"  style="color: #0B9BCD">Blue
+              <input type="radio" name="radiobutton" id="highlight1" value="highlight1">
+              <span class="checkmark"></span>
+            </label> <br/><br/>
+            <label class="container" style="color: green">Green
+              <input type="radio" name="radiobutton" id="highlight2" value="highlight2">
+              <span class="checkmark"></span>
+            </label>  <br/><br/>
+            <label class="container" style="color: #F8C200">Yellow
+              <input type="radio" name="radiobutton" id="highlight3" value="highlight3">
+              <span class="checkmark"></span>
+            </label> <br/><br/>
+            <label class="container" style="color: #BF0603">Red
+              <input type="radio" name="radiobutton" id="highlight4" value="highlight4">
+              <span class="checkmark"></span>
+            </label> <br/><br/>
+            <b id="highlightElements" style="cursor: pointer; color: brown">Highlight Elements</b> <br/><br/>
+            <b id="highlightNeighbors" style="cursor: pointer; color: brown">Highlight Neighbors</b><br/><br/>
+            <b id="showHiddenNeighbors" style="cursor: pointer; color: brown">Show Hidden Neighbors of Selected</b> <br/><br/>
+            <b id="removeSelectedHighlights" style="cursor: pointer; color: brown">Remove Selected Highlights</b> <br/><br/>
+            <b id="removeAllHighlights" style="cursor: pointer; color: brown">Remove All Highlights</b> <br/><br/>
+            <b id="zoomToSelected" style="cursor: pointer; color: brown">Zoom to Selected</b><br/><br/>
+            <b id="marqueeZoom" style="cursor: pointer; color: brown">Marquee Zoom</b>
+            <b>Shift + drag</b> to specify region<br/><br/>
+            <b>Shift + taphold</b> to select neighbors<br/><br/>
+            <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
+            <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
+        </div>
+        <div id="cy"></div>
 
-	</body>
+    </body>
 
 </html>
