--- a/demo.html
+++ b/demo.html
@@ -202,6 +202,55 @@
 
 
                 var api = cy.viewUtilities({
+                    node: {
+                      highlighted: {
+                        'border-color': '#0B9BCD',  //blue
+                        'border-width': 3
+                      },
+                      highlighted2: {
+                        'border-color': '#04F06A',  //green
+                        'border-width': 3
+                      },
+                      highlighted3: {
+                        'border-color': '#F5E663',   //yellow
+                        'border-width': 3
+                      },
+                      highlighted4: {
+                        'border-color': '#BF0603',    //red
+                        'border-width': 3
+                      },
+                      selected: {
+                        'border-color': 'black',
+                        'border-width': 3,
+                        'background-color': 'lightgrey'
+                      }
+
+                    },
+                    edge: {
+                      highlighted: {
+                        'line-color': '#0B9BCD',    //blue
+                        'width' : 3
+                      },
+                      highlighted2: {
+                        'line-color': '#04F06A',   //green
+                        'width' : 3
+                      },
+                      highlighted3: {
+                        'line-color': '#F5E663',    //yellow
+                        'width' : 3
+                      },
+                      highlighted4: {
+                        'line-color': '#BF0603',    //red
+                        'width' : 3
+                      },
+                      selected: {
+                        'line-color': 'black',
+                        'width' : 3
+                      }
+                    },
+                    setVisibilityOnHide: false, // whether to set visibility on hide/show
+                    setDisplayOnHide: true, // whether to set display on hide/show
+                    zoomAnimationDuration: 1500, //default duration for zoom animation speed
                     neighbor: function(node){
                         return node.closedNeighborhood();
                     },
@@ -230,7 +279,7 @@
                 document.getElementById("hide").addEventListener("click", function () {
                     api.disableMarqueeZoom();
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
-                    //thinBorder(nodesWithHiddenNeighbor);
+                    revertBorder(nodesWithHiddenNeighbor);
                     api.hide(cy.$(":selected"));
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     changeBorder(nodesWithHiddenNeighbor);
@@ -296,6 +345,7 @@
                     revertBorder(nodesWithHiddenNeighbor);
                     api.show(cy.nodes(":selected").neighborhood().union(cy.nodes(":selected").neighborhood().parent()));
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
+                    changeBorder(nodesWithHiddenNeighbor);
                     if(document.getElementById('layout').checked){
                       layout.run();
                     }
