--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -11,7 +11,7 @@
 
         <!-- for testing with local version of cytoscape.js -->
         <!--<script src="../cytoscape.js/build/cytoscape.js"></script>-->
-        <script src="https://cdn.rawgit.com/cytoscape/cytoscape.js-cose-bilkent/2.0.4/cytoscape-cose-bilkent.js"></script>
+        <script src="https://raw.githack.com/cytoscape/cytoscape.js-cose-bilkent/master/cytoscape-cose-bilkent.js"></script>
         <script src="lib/cytoscape-undo-redo.js"></script>
 
         <script src="cytoscape-view-utilities.js"></script>
@@ -440,11 +440,16 @@
             <b id="removeAllHighlights" style="cursor: pointer; color: darkmagenta">Remove All Highlights</b> <br/><br/>
             <b id="zoomToSelected" style="cursor: pointer; color: darkmagenta">Zoom to Selected</b><br/><br/>
             <b id="marqueeZoom" style="cursor: pointer; color: darkmagenta">Marquee Zoom</b>
-            <b>Shift + drag</b> to specify region<br/><br/>
-            <b>Shift + taphold</b> to select neighbors<br/><br/>
-            <b>CTRL+Z</b> to undo, <b>CTRL+Y</b> to redo<br/><br/>
+            <br/>
+            <span style="font-weight: normal !important; font-size: 14px !important;">Shift + drag to specify region; gets disabled after zoom, mouse events on canvas and other api functions calls</span>
+            <br/><br/>
+            
             <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
-            <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked"><br>
+            <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked">
+            <br/><br/>
+            <span style="font-weight: normal !important; font-size: 14px !important;">CTRL+Z to undo, CTRL+Y to redo</span>
+            <br/><br/>
+            <span style="font-weight: normal !important; font-size: 14px !important;">Shift + taphold to select neighbors</span>
         </div>
 
         <div id="cy"></div>
