adjusted wheel sensitivty in demo files

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -149,6 +149,7 @@
                             }
                         }
                     ],
+                    wheelSensitivity: 0.2,
 
                     elements: {
                         nodes: [
