--- a/demo.html
+++ b/demo.html
@@ -148,6 +148,7 @@
                             }
                         }
                     ],
+                    wheelSensitivity: 0.2,
 
                     elements: {
                         nodes: [
