#19 changed titles for undoable demo

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -445,7 +445,7 @@
     </head>
 
     <body>
-        <h1>cytoscape.js-view-utilities demo</h1>
+        <h1>cytoscape.js-view-utilities demo undoable</h1>
 
         <div class="topnav">
             <b id="hide" style="cursor: pointer; color: darkmagenta">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: darkmagenta">Show All</b> <br/><br/>
